disabling custom scrollbar on mobile to fix collection view weird scrolling bugs + add swipe to open/close tree view (buda-base/public-digital-library#405)

--- a/css/less/main-menu.less
+++ b/css/less/main-menu.less
@@ -223,7 +223,7 @@
   align-items: center; justify-content: center;
   &.top { top:5px;left:5px; background-color:white;
     &:not(.on) + .mirador-main-menu-bar { top:-60px; }
-    &.collec + .mirador-main-menu-bar { z-index:-100;transition:none;
+    &.collec + .mirador-main-menu-bar { z-index:-100;transition:none;display:none;
       .X { display:none; }
     }
   }
